force-app/main/default/objects/Region_Assignment__c/Region_Assignment__c.object-meta.xml
<CustomObject>
    <label>Region Assignment</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>