force-app/main/default/objects/Region_Assignment__c/fields/Contractor_Recruitment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Recruitment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Recruitment Profile</label>
    <referenceTo>Contractor_Recruitment__c</referenceTo>
    <relationshipLabel>Region Assignments</relationshipLabel>
    <relationshipName>Region_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>