force-app/main/default/objects/Region_Assignment__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>Region__r.County__c</formula>
    <label>County</label>
    <type>Text</type>
</CustomField>