force-app/main/default/objects/Region_Assignment__c/fields/Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Property_Count__c</fullName>
    <label>Property Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>