force-app/main/default/objects/Region_Assignment__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Region Assignments</relationshipLabel>
    <relationshipName>Region_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>