force-app/main/default/objects/Region_Assignment__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>Region__r.Name</formula>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>