force-app/main/default/objects/Region_Assignment__c/fields/Region_Type__c.field-meta.xml
<CustomField>
    <fullName>Region_Type__c</fullName>
    <formula>TEXT(Region__r.Type__c)</formula>
    <label>Region Type</label>
    <type>Text</type>
</CustomField>