force-app/main/default/objects/Region_Assignment__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Text(Region__r.Zip_Code_State__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>