force-app/main/default/objects/Region_Assignment__c/fields/Zip_Code_New__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_New__c</fullName>
    <externalId>true</externalId>
    <label>Zip Code New</label>
    <length>5</length>
    <type>Text</type>
</CustomField>