force-app/main/default/objects/Region_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Unique_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Region_Name__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>